# llm-compiler-ai-upskill

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  logger.py  main.py
app/agents/: __init__.py  agent_tools.py
app/static/: index.html
