[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "websockets (>=12.0,<13.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "langsmith (>=0.4.32,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"